--- a/PanelAdm/style.css
+++ b/PanelAdm/style.css
@@ -1,8 +1,10 @@
 *, *::after, *::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  filter: opacity(1);
+  -webkit-filter: opacity(1);
+          filter: opacity(1);
   font-family: Lato, "sans-serif";
 }
 
@@ -13,18 +15,30 @@ body, html {
 nav {
   height: 8vh;
   width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   margin: 1% 2.5% 1% 2.5%;
   font-size: 1rem;
   color: #333367;
 }
 
 nav .nav__text {
-  order: 5;
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
   font-size: 0.85em;
   font-weight: bold;
   color: #7d7d7d;
@@ -32,13 +46,15 @@ nav .nav__text {
 }
 
 #nav_logo {
-  filter: opacity(1);
+  -webkit-filter: opacity(1);
+          filter: opacity(1);
   margin: 0 1rem 0 0;
 }
 
 #nav_logo:hover {
   cursor: pointer;
-  filter: opacity(0.5);
+  -webkit-filter: opacity(0.5);
+          filter: opacity(0.5);
 }
 
 input {
@@ -53,26 +69,38 @@ input {
 
 input.list {
   background: transparent;
-  order: 2;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
   border: none;
+  -webkit-transition: -webkit-filter 0.5s ease;
+  transition: -webkit-filter 0.5s ease;
   transition: filter 0.5s ease;
+  transition: filter 0.5s ease, -webkit-filter 0.5s ease;
 }
 
 input.list__login {
   border: none;
   background: transparent;
-  order: 5;
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
+  -webkit-transition: -webkit-filter 0.3s ease;
+  transition: -webkit-filter 0.3s ease;
   transition: filter 0.3s ease;
+  transition: filter 0.3s ease, -webkit-filter 0.3s ease;
 }
 
 input.list__login:hover {
-  filter: opacity(0.7);
+  -webkit-filter: opacity(0.7);
+          filter: opacity(0.7);
   cursor: pointer;
 }
 
 input.list:hover {
   cursor: pointer;
-  filter: opacity(0.7);
+  -webkit-filter: opacity(0.7);
+          filter: opacity(0.7);
 }
 
 #icon {
@@ -80,7 +108,9 @@ input.list:hover {
 }
 
 #icon1 {
-  order: 3;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   padding: 5px 15px;
   margin-right: 10px;
   background-image: url("../images/poland.png");
@@ -90,7 +120,9 @@ input.list:hover {
 }
 
 #icon2 {
-  order: 4;
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
   padding: 5px 18px;
   background-image: url("../images/english.png");
   background-position: center;
@@ -99,7 +131,9 @@ input.list:hover {
 }
 
 #icon3 {
-  order: 6;
+  -webkit-box-ordinal-group: 7;
+      -ms-flex-order: 6;
+          order: 6;
   padding: 15px 18px;
   background-image: url("../images/phone-icon2.png");
   background-position: left center;
@@ -108,7 +142,9 @@ input.list:hover {
 }
 
 #icon4 {
-  order: 8;
+  -webkit-box-ordinal-group: 9;
+      -ms-flex-order: 8;
+          order: 8;
   padding: 15px 18px;
   margin-left: 10px;
   background-image: url("../images/letter-icon2.png");
@@ -118,29 +154,51 @@ input.list:hover {
 }
 
 #icon-text1 {
-  order: 6;
+  -webkit-box-ordinal-group: 7;
+      -ms-flex-order: 6;
+          order: 6;
   padding: 0 15px 0 0;
   font-size: 1em;
 }
 
 #icon-text2 {
-  order: 9;
+  -webkit-box-ordinal-group: 10;
+      -ms-flex-order: 9;
+          order: 9;
 }
 
 footer.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 12vh;
   width: 60%;
 }
 
 footer.container .container__item1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #0c0b10;
   border: 1px #7d7d7d solid;
   background: #d7d7d7;
@@ -154,10 +212,19 @@ footer.container .container__item1_logo {
 }
 
 footer.container .container__item1_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 100%;
   width: 47.5%;
   font-size: 0.8em;
@@ -165,11 +232,17 @@ footer.container .container__item1_text {
 }
 
 footer.container .container__item2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 3.5vh;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 0.8em;
   background: #7d7d7d;
   border: 1px #7d7d7d solid;
@@ -182,17 +255,35 @@ body, html {
   width: 100vw;
   color: white;
   font-family: Lato, "sans-serif";
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main.container-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100vw;
 }
 
@@ -203,15 +294,25 @@ main.container-main {
   border: 2px solid #6f6f6f;
   color: #7d7d7d;
   font-size: 1.5rem;
+  display: -ms-grid;
   display: grid;
-  grid-template: 1fr / 0.25fr 1fr;
+  -ms-grid-rows: 1fr;
+  -ms-grid-columns: 0.25fr 1fr;
+      grid-template: 1fr / 0.25fr 1fr;
   justify-items: space-between;
 }
 
 .main__article_item1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border-right: 2px solid #6f6f6f;
   padding: 15% 0 0 0;
 }
@@ -223,6 +324,7 @@ main.container-main {
   margin: 0 0 20% 0;
   height: 2.5rem;
   width: 12rem;
+  -webkit-transition: 1s ease;
   transition: 1s ease;
 }
 
@@ -233,8 +335,13 @@ main.container-main {
 }
 
 .main__article_item2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-size: 2rem;
   margin: 2% 1% 2% 5%;
   width: 70%;
@@ -263,6 +370,18 @@ main.container-main {
   text-transform: uppercase;
 }
 
+.main__article_item2_Posty_input::-webkit-input-placeholder {
+  opacity: 0.7;
+}
+
+.main__article_item2_Posty_input:-ms-input-placeholder {
+  opacity: 0.7;
+}
+
+.main__article_item2_Posty_input::-ms-input-placeholder {
+  opacity: 0.7;
+}
+
 .main__article_item2_Posty_input::placeholder {
   opacity: 0.7;
 }
@@ -271,6 +390,18 @@ main.container-main {
   font-size: 1rem;
   border: 2px solid #6f6f6f;
   border-radius: 0.2rem;
+}
+
+.main__article_item2_Posty_textarea::-webkit-input-placeholder {
+  opacity: 0.7;
+}
+
+.main__article_item2_Posty_textarea:-ms-input-placeholder {
+  opacity: 0.7;
+}
+
+.main__article_item2_Posty_textarea::-ms-input-placeholder {
+  opacity: 0.7;
 }
 
 .main__article_item2_Posty_textarea::placeholder {
@@ -283,11 +414,15 @@ main.container-main {
   letter-spacing: 1px;
   border: 2px solid #6f6f6f;
   border-radius: 0.35rem;
+  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
   padding: 2% 3%;
   margin: 5% 0 0 0;
-  align-self: center;
-  justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .main__article_item2_Posty_submit:hover {
@@ -316,19 +451,37 @@ main.container-main {
 }
 
 footer.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 12vh;
   width: 60%;
 }
 
 footer.container .container__item1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #0c0b10;
   border: 1px #7d7d7d solid;
   background: #d7d7d7;
@@ -341,10 +494,19 @@ footer.container .container__item1_logo {
 }
 
 footer.container .container__item1_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 100%;
   width: 47.5%;
   font-size: 0.75em;
@@ -352,11 +514,17 @@ footer.container .container__item1_text {
 }
 
 footer.container .container__item2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 3.5vh;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 0.8em;
   background: #7d7d7d;
   border: 1px #7d7d7d solid;
@@ -364,7 +532,9 @@ footer.container .container__item2 {
 }
 
 .wrapper {
-  order: 2;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
   width: auto;
 }
 
@@ -380,12 +550,24 @@ footer.container .container__item2 {
 @media only screen and (max-width: 1328px) {
   .mobile-wrapper {
     visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    order: 8;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-ordinal-group: 9;
+        -ms-flex-order: 8;
+            order: 8;
     font-weight: bold;
     font-size: 0.8em;
     width: 100%;
@@ -397,10 +579,19 @@ footer.container .container__item2 {
     height: 0;
   }
   main.container-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   nav {
     height: 6vh;
