--- a/style.scss
+++ b/style.scss
@@ -308,81 +308,36 @@ section.container {
     visibility: hidden;
 }
 
-@media only screen and (max-width:1328px) {
+@media only screen and (min-width:1921px) {
 
-    .mobile-wrapper {
-        visibility: visible;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        order: 8;
-
-        font-weight: bold;
-        font-size: 0.8em;
-        width: 100%;
-        
-        margin: 2% 0% 7% 0%;
-    }
     section.container {
-        background: white;
-        width: 70%;
-    }
-    #ig {
-        display: initial;
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
-        -webkit-background-clip: text;
-    
-        width: 2%;
-        height: 70%;
-    
-        margin: 0 0.5% 0 0.5%;
-        order: 10;
-        -webkit-text-fill-color: transparent;
-    }
-    
-    #fb {
-        width: 2%;
-        height: 70%;
-    
-        margin: 0 0.5% 0 0.5%;
-        order: 10;
-        -webkit-text-fill-color: transparent;
-    }
-    #wa {
-        width: 2%;
-        height: 70%;
-    
-        margin: 0 0 0 0.5%;
-        order: 10;
-        -webkit-text-fill-color: transparent;
-        color: rgb(19, 163, 19);
-    }
-    .wrapper {
-        visibility: hidden;
-        width: 0;
-        height: 0;
-    }
-    nav {
-        height: 6vh;
-        width: 100%;
-        margin: 1% auto 0 0;
+        width: 1150px;
+        height: 1188px;
     }
 
-    .item {
-        width: 100%;  
+    nav {
+        width: 1920px;
+        height: 86.4px;
     }
-        
+
+    .item, .item1, .item2 {
+        width: 1150px;
+        height: 310px;
+    }
+
+    .item1 {
         &__photo {
-            visibility: hidden;
-            width: 0;
-            height: 0;
+            height: 310px;
         }
+    }
+    #icon {
+        width: 357.4px;
+        height: 88.5px;
+    }
 
     footer.container {
-        width: 70%;
-        height: 100%;
+        height: 110px;
+        margin: 8vw 0 0 0;
 
         .container__item1 {
             height: 12vh;
@@ -397,91 +352,138 @@ section.container {
         }
     }
 }
-@media only screen and (max-width:850px) {
-    #icon {
-        margin: 0;
-    }
-}
 
-@media only screen and (max-width:764px) {
-    #itemcontainer {
-        align-items: flex-end;
-        padding: 0 5% 0 0;
-        width: 100%;
-    }
-    #icon {
-        margin: 0;
-    }
-    #icon1 {
-        margin-right: 5px;
-    }
-    #icon2 {
-        margin-right: -5px;
-    }
-    #icon4 {
-        margin-left: 2px;
-    }
-    nav {
-        font-size: 0.768em;
-    }
-    #nav_logo {
-        width: 120px;
-        height: 30px;
-    }
-    .mobile-wrapper {
-        margin: 2.5% 0 8% 0;
+@media only screen and (min-height: 1081px) {
 
-        .list {
-            font-size: 0.97em;
-        }
-    }
     section.container {
-        width: 85%;
+        width: 1150px;
+        height: 1188px;
     }
-    .item {
-        width: 100%;
-        &__text {
-            width: 60%;
-            align-items: flex-end;
-        }
-        // &:first-child {
-        //     flex-direction: row;
-        // }
-        
+
+    nav {
+        width: 1920px;
+        height: 86.4px;
     }
-    
+
+    .item, .item1, .item2 {
+        height: 310px;
+    }
+
     footer.container {
-        width: 85%;
+        height: 110px;
+        margin: 8vh 0 0 0;
 
         .container__item1 {
-            &_text {
-                font-size: 0.65em;
-            }
+            height: 12vh;
+            width: 100%;
             &_logo {
-                margin-left: 12.5%;
-                width: 100px;
-                height: 25px;
+                margin: 0 0 0 10%;
+            }
+            &_text {
+                width: 47.5%;
+                font-size: 0.75em;
             }
         }
     }
 }
 
-@media only screen and (max-width:500px) {
+@media only screen and (max-width: 1280px) {
 
-    .item {
-        &__container {
-            width: 100%;
-        }
-        &__text {
-            width: 100%;
-        }
-        &:first-child {
-            padding: 5%;
+    body, html {
+        width: 100vw;
+        height: 100vh;
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+
+    section.container {
+        width: 1150px;
+        height: 1188px;
+    }
+
+    nav {
+        width: 1280px;
+        height: 86.4px;
+    }
+
+    .item, .item1, .item2 {
+        width: 1150px;
+        height: 310px;
+    }
+
+    .item1 {
+        &__photo {
+            height: 310px;
         }
     }
+    #icon {
+        width: 357.4px;
+        height: 88.5px;
+    }
+
+    footer.container {
+        width: 1150px;
+        height: 110px;
+        margin: 12vw 0 0 0;
+
+        .container__item1 {
+            height: 12vh;
+            width: 100%;
+            &_logo {
+                margin: 0 0 0 10%;
+            }
+            &_text {
+                width: 47.5%;
+                font-size: 0.75em;
+            }
+        }
+    }
+}
+
+@media only screen and (max-height: 720px) {
    
-    #nav_logo {
-        width: 150px;
-        height: 20px;
+    section.container {
+        overflow-y: hidden;
+        width: 1150px;
+        height: 1188px;
+    }
+
+    nav {
+        width: 1280px;
+        height: 86.4px;
+    }
+
+    .item, .item1, .item2 {
+        height: 310px;
+    }
+
+    .item1 {
+        &__photo {
+            height: 310px;
+        }
+    }
+
+    #icon {
+        width: 357.4px;
+        // height: 88.5px;
+        height: 120px;
+    }
+
+    footer.container {
+        height: 110px;
+        width: 1150px;
+        margin: 1vw 0 -20% 0;
+
+        .container__item1 {
+            height: 12vh;
+            width: 100%;
+            &_logo {
+                margin: 0 0 0 10%;
+            }
+            &_text {
+                width: 47.5%;
+                font-size: 0.75em;
+            }
+        }
     }
 }
