--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   margin: 1% 2.5% 1% 2.5%;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #333367;
 }
 
@@ -266,43 +266,6 @@ body, html {
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.1rem;
-}
-
-nav {
-  height: 8vh;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  margin: 1% 2.5% 1% 2.5%;
-  font-size: 0.9rem;
-  color: #333367;
-}
-
-nav .nav__text {
-  -webkit-box-ordinal-group: 6;
-      -ms-flex-order: 5;
-          order: 5;
-  font-size: 1.1rem;
-  font-weight: bold;
-  color: #7d7d7d;
-  padding: 10px 8px;
-}
-
-#nav_logo {
-  margin: 0 1% 0 0;
 }
 
 input {
@@ -708,85 +671,102 @@ section.container {
   }
 }
 
-@media only screen and (max-width: 1280px) {
-  body, html {
-    width: 100vw;
-    height: 100vh;
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-  section.container {
-    width: 1150px;
-    height: 1188px;
-  }
-  nav {
-    width: 1280px;
-    height: 86.4px;
-  }
-  .item, .item1, .item2 {
-    width: 1150px;
-    height: 310px;
-  }
-  .item1__photo {
-    height: 310px;
-  }
-  #icon {
-    width: 357.4px;
-    height: 88.5px;
-  }
-  footer.container {
-    width: 1150px;
-    height: 110px;
-    margin: 12vw 0 0 0;
-  }
-  footer.container .container__item1 {
-    height: 12vh;
-    width: 100%;
-  }
-  footer.container .container__item1_logo {
-    margin: 0 0 0 10%;
-  }
-  footer.container .container__item1_text {
-    width: 47.5%;
-    font-size: 0.75em;
-  }
+/*@media only screen and (max-width: 1280px) {
+
+    body, html {
+        overflow-x: hidden;
+    }
+
+    section.container {
+        overflow-x: hidden;
+        width: 1150px;
+        height: 1188px;
+    }
+
+    nav {
+        width: 1280px;
+        height: 86.4px;
+    }
+
+    .item, .item1, .item2 {
+        width: 1150px;
+        height: 310px;
+    }
+
+    .item1 {
+        &__photo {
+            height: 310px;
+        }
+    }
+    #icon {
+        width: 357.4px;
+        height: 88.5px;
+    }
+
+    footer.container {
+        width: 1150px;
+        height: 110px;
+        margin: 12vw 0 0 0;
+
+        .container__item1 {
+            height: 12vh;
+            width: 100%;
+            &_logo {
+                margin: 0 0 0 10%;
+            }
+            &_text {
+                width: 47.5%;
+                font-size: 0.75em;
+            }
+        }
+    }
 }
 
 @media only screen and (max-height: 720px) {
-  section.container {
-    overflow-y: hidden;
-    width: 1150px;
-    height: 1188px;
-  }
-  nav {
-    width: 1280px;
-    height: 86.4px;
-  }
-  .item, .item1, .item2 {
-    height: 310px;
-  }
-  .item1__photo {
-    height: 310px;
-  }
-  #icon {
-    width: 357.4px;
-    height: 120px;
-  }
-  footer.container {
-    height: 110px;
-    width: 1150px;
-    margin: 1vw 0 -20% 0;
-  }
-  footer.container .container__item1 {
-    height: 12vh;
-    width: 100%;
-  }
-  footer.container .container__item1_logo {
-    margin: 0 0 0 10%;
-  }
-  footer.container .container__item1_text {
-    width: 47.5%;
-    font-size: 0.75em;
-  }
-}
+   
+    section.container {
+        overflow-y: hidden;
+        width: 1150px;
+        height: 1188px;
+    }
+
+    nav {
+        width: 1280px;
+        height: 86.4px;
+    }
+
+    .item, .item1, .item2 {
+        height: 310px;
+    }
+
+    .item1 {
+        &__photo {
+            height: 310px;
+        }
+    }
+
+    #icon {
+        width: 357.4px;
+        // height: 88.5px;
+        height: 120px;
+    }
+
+    footer.container {
+        height: 110px;
+        width: 1150px;
+        margin: 1vw 0 -20% 0;
+
+        .container__item1 {
+            height: 12vh;
+            width: 100%;
+            &_logo {
+                margin: 0 0 0 10%;
+            }
+            &_text {
+                width: 47.5%;
+                font-size: 0.75em;
+            }
+        }
+    }
+} */
 /*# sourceMappingURL=style.css.map */
