--- a/style.css
+++ b/style.css
@@ -278,6 +278,30 @@ input {
   text-transform: uppercase;
 }
 
+.list_form {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+}
+
+.list__login_text1 {
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
+}
+
+.list__login_text2 {
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
+}
+
+.list__login_text3 {
+  -webkit-box-ordinal-group: 7;
+      -ms-flex-order: 6;
+          order: 6;
+}
+
 #icon {
   position: absolute;
   left: 0;
@@ -657,6 +681,80 @@ section.container {
   footer.container {
     height: 110px;
     margin: 8vh 0 0 0;
+  }
+  footer.container .container__item1 {
+    height: 12vh;
+    width: 100%;
+  }
+  footer.container .container__item1_logo {
+    margin: 0 0 0 10%;
+  }
+  footer.container .container__item1_text {
+    width: 47.5%;
+    font-size: 0.75em;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  section.container {
+    width: 1150px;
+    height: 1188px;
+  }
+  nav {
+    width: 1920px;
+    height: 86.4px;
+  }
+  .item, .item1, .item2 {
+    width: 1150px;
+    height: 310px;
+  }
+  .item1__photo {
+    height: 310px;
+  }
+  #icon {
+    width: 357.4px;
+    height: 88.5px;
+  }
+  footer.container {
+    height: 110px;
+    margin: 8vw 0 0 0;
+  }
+  footer.container .container__item1 {
+    height: 12vh;
+    width: 100%;
+  }
+  footer.container .container__item1_logo {
+    margin: 0 0 0 10%;
+  }
+  footer.container .container__item1_text {
+    width: 47.5%;
+    font-size: 0.75em;
+  }
+}
+
+@media only screen and (max-height: 720) {
+  section.container {
+    width: 1150px;
+    height: 1188px;
+  }
+  nav {
+    width: 1920px;
+    height: 86.4px;
+  }
+  .item, .item1, .item2 {
+    width: 1150px;
+    height: 310px;
+  }
+  .item1__photo {
+    height: 310px;
+  }
+  #icon {
+    width: 357.4px;
+    height: 88.5px;
+  }
+  footer.container {
+    height: 110px;
+    margin: 8vw 0 0 0;
   }
   footer.container .container__item1 {
     height: 12vh;
