--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,20 @@ input {
 
 }
 
+.list_form {
+    order: 3;
+}
+
+.list__login_text1 {
+    order: 4;
+}
+.list__login_text2 {
+    order: 5;
+}
+.list__login_text3 {
+    order: 6;
+}
+
 #icon {
     position: absolute;
     left: 0;
@@ -361,6 +375,79 @@ section.container {
     }
 }
 
+@media only screen and (max-width: 1280px) {
+section.container {
+    width: 1150px;
+    height: 1188px;
+  }
+  nav {
+    width: 1920px;
+    height: 86.4px;
+  }
+  .item, .item1, .item2 {
+    width: 1150px;
+    height: 310px;
+  }
+  .item1__photo {
+    height: 310px;
+  }
+  #icon {
+    width: 357.4px;
+    height: 88.5px;
+  }
+  footer.container {
+    height: 110px;
+    margin: 8vw 0 0 0;
+  }
+  footer.container .container__item1 {
+    height: 12vh;
+    width: 100%;
+  }
+  footer.container .container__item1_logo {
+    margin: 0 0 0 10%;
+  }
+  footer.container .container__item1_text {
+    width: 47.5%;
+    font-size: 0.75em;
+  }
+}
+
+@media only screen and (max-height: 720) {
+    section.container {
+        width: 1150px;
+        height: 1188px;
+      }
+      nav {
+        width: 1920px;
+        height: 86.4px;
+      }
+      .item, .item1, .item2 {
+        width: 1150px;
+        height: 310px;
+      }
+      .item1__photo {
+        height: 310px;
+      }
+      #icon {
+        width: 357.4px;
+        height: 88.5px;
+      }
+      footer.container {
+        height: 110px;
+        margin: 8vw 0 0 0;
+      }
+      footer.container .container__item1 {
+        height: 12vh;
+        width: 100%;
+      }
+      footer.container .container__item1_logo {
+        margin: 0 0 0 10%;
+      }
+      footer.container .container__item1_text {
+        width: 47.5%;
+        font-size: 0.75em;
+      }
+}
 /*@media only screen and (max-width: 1280px) {
 
     body, html {
