--- a/Produkty/style.css
+++ b/Produkty/style.css
@@ -1,10 +1,8 @@
 *, *::after, *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  -webkit-filter: opacity(1);
-          filter: opacity(1);
+  filter: opacity(1);
   font-family: Lato, "sans-serif";
 }
 
@@ -15,30 +13,18 @@ body, html {
 nav {
   height: 8vh;
   width: 70%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
   margin: 1% 2.5% 1% 2.5%;
   font-size: 0.8rem;
   color: #333367;
 }
 
 nav .nav__text {
-  -webkit-box-ordinal-group: 6;
-      -ms-flex-order: 5;
-          order: 5;
+  order: 5;
   font-size: 0.85em;
   font-weight: bold;
   color: #7d7d7d;
@@ -46,15 +32,14 @@ nav .nav__text {
 }
 
 #nav_logo {
-  -webkit-filter: opacity(1);
-          filter: opacity(1);
+  filter: opacity(1);
   margin: 0 1rem 0 0;
+  object-fit: contain;
 }
 
 #nav_logo:hover {
   cursor: pointer;
-  -webkit-filter: opacity(0.5);
-          filter: opacity(0.5);
+  filter: opacity(0.5);
 }
 
 input {
@@ -69,38 +54,24 @@ input {
 
 input.list {
   background: transparent;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
   border: none;
-  -webkit-transition: -webkit-filter 0.5s ease;
-  transition: -webkit-filter 0.5s ease;
   transition: filter 0.5s ease;
-  transition: filter 0.5s ease, -webkit-filter 0.5s ease;
 }
 
 input.list__login {
   border: none;
   background: transparent;
-  -webkit-box-ordinal-group: 6;
-      -ms-flex-order: 5;
-          order: 5;
-  -webkit-transition: -webkit-filter 0.3s ease;
-  transition: -webkit-filter 0.3s ease;
   transition: filter 0.3s ease;
-  transition: filter 0.3s ease, -webkit-filter 0.3s ease;
 }
 
 input.list__login:hover {
-  -webkit-filter: opacity(0.7);
-          filter: opacity(0.7);
+  filter: opacity(0.7);
   cursor: pointer;
 }
 
 input.list:hover {
   cursor: pointer;
-  -webkit-filter: opacity(0.7);
-          filter: opacity(0.7);
+  filter: opacity(0.7);
 }
 
 #icon {
@@ -108,9 +79,6 @@ input.list:hover {
 }
 
 #icon1 {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
   padding: 5px 15px;
   margin-right: 10px;
   background-image: url("../images/poland.png");
@@ -120,9 +88,6 @@ input.list:hover {
 }
 
 #icon2 {
-  -webkit-box-ordinal-group: 5;
-      -ms-flex-order: 4;
-          order: 4;
   padding: 5px 18px;
   background-image: url("../images/english.png");
   background-position: center;
@@ -130,75 +95,20 @@ input.list:hover {
   background-size: 25px 15px;
 }
 
-#icon3 {
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-  padding: 15px 18px;
-  background-image: url("../images/phone-icon2.png");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: 30px 30px;
-}
-
-#icon4 {
-  -webkit-box-ordinal-group: 9;
-      -ms-flex-order: 8;
-          order: 8;
-  padding: 15px 18px;
-  margin-left: 10px;
-  background-image: url("../images/letter-icon2.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 52.5px 28px;
-}
-
-#icon-text1 {
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-  padding: 0 15px 0 0;
-  font-size: 1em;
-}
-
-#icon-text2 {
-  -webkit-box-ordinal-group: 10;
-      -ms-flex-order: 9;
-          order: 9;
-}
-
 footer.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 12vh;
   width: 60%;
 }
 
 footer.container .container__item1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   color: #0c0b10;
   border: 1px #7d7d7d solid;
   background: #d7d7d7;
@@ -209,22 +119,14 @@ footer.container .container__item1 {
 footer.container .container__item1_logo {
   margin-left: 20%;
   opacity: 1;
+  object-fit: contain;
 }
 
 footer.container .container__item1_text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   height: 100%;
   width: 47.5%;
   font-size: 0.8em;
@@ -232,17 +134,11 @@ footer.container .container__item1_text {
 }
 
 footer.container .container__item2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 3.5vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   font-size: 0.8em;
   background: #7d7d7d;
   border: 1px #7d7d7d solid;
@@ -255,46 +151,25 @@ body, html {
   max-width: 100vw;
   color: white;
   font-family: Lato, "sans-serif";
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main.container-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
 .main__container {
   width: 60%;
   height: 110vh;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 22.5% 75%;
-  -ms-grid-columns: 0.2fr 1fr;
-      grid-template: 22.5% 75% / 0.2fr 1fr;
+  grid-template: 22.5% 75% / 0.2fr 1fr;
   grid-gap: 2%;
   background: #d7d7d7;
 }
@@ -302,21 +177,14 @@ main.container-main {
 .main__image {
   width: 100%;
   max-height: 25vh;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
+  object-fit: cover;
+  object-position: top;
   grid-column: 1/3;
 }
 
 .main__article {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 0.1fr 1fr;
-  -ms-grid-columns: 1fr;
-      grid-template: 0.1fr 1fr / 1fr;
+  grid-template: 0.1fr 1fr / 1fr;
   grid-row-gap: 2%;
   background: #af4545;
   border: 0.2rem solid black;
@@ -339,9 +207,7 @@ main.container-main {
 }
 
 .wrapper {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+  order: 2;
   width: auto;
 }
 
@@ -357,24 +223,12 @@ main.container-main {
 @media only screen and (max-width: 1328px) {
   .mobile-wrapper {
     visibility: visible;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-ordinal-group: 9;
-        -ms-flex-order: 8;
-            order: 8;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    order: 8;
     font-weight: bold;
     font-size: 0.8em;
     width: 100%;
@@ -386,19 +240,10 @@ main.container-main {
     height: 0;
   }
   main.container-main {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
   nav {
     height: 6vh;
