--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 *, *::after, *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  -webkit-filter: opacity(1);
-          filter: opacity(1);
+  filter: opacity(1);
   font-family: Lato, "sans-serif";
 }
 
@@ -15,30 +13,18 @@ body, html {
 nav {
   height: 8vh;
   width: 70%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
   margin: 1% 2.5% 1% 2.5%;
   font-size: 0.8rem;
   color: #333367;
 }
 
 nav .nav__text {
-  -webkit-box-ordinal-group: 6;
-      -ms-flex-order: 5;
-          order: 5;
+  order: 5;
   font-size: 0.85em;
   font-weight: bold;
   color: #7d7d7d;
@@ -46,15 +32,14 @@ nav .nav__text {
 }
 
 #nav_logo {
-  -webkit-filter: opacity(1);
-          filter: opacity(1);
+  filter: opacity(1);
   margin: 0 1rem 0 0;
+  object-fit: contain;
 }
 
 #nav_logo:hover {
   cursor: pointer;
-  -webkit-filter: opacity(0.5);
-          filter: opacity(0.5);
+  filter: opacity(0.5);
 }
 
 input {
@@ -69,38 +54,24 @@ input {
 
 input.list {
   background: transparent;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
   border: none;
-  -webkit-transition: -webkit-filter 0.5s ease;
-  transition: -webkit-filter 0.5s ease;
   transition: filter 0.5s ease;
-  transition: filter 0.5s ease, -webkit-filter 0.5s ease;
 }
 
 input.list__login {
   border: none;
   background: transparent;
-  -webkit-box-ordinal-group: 6;
-      -ms-flex-order: 5;
-          order: 5;
-  -webkit-transition: -webkit-filter 0.3s ease;
-  transition: -webkit-filter 0.3s ease;
   transition: filter 0.3s ease;
-  transition: filter 0.3s ease, -webkit-filter 0.3s ease;
 }
 
 input.list__login:hover {
-  -webkit-filter: opacity(0.7);
-          filter: opacity(0.7);
+  filter: opacity(0.7);
   cursor: pointer;
 }
 
 input.list:hover {
   cursor: pointer;
-  -webkit-filter: opacity(0.7);
-          filter: opacity(0.7);
+  filter: opacity(0.7);
 }
 
 #icon {
@@ -108,9 +79,6 @@ input.list:hover {
 }
 
 #icon1 {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
   padding: 5px 15px;
   margin-right: 10px;
   background-image: url("../images/poland.png");
@@ -120,9 +88,6 @@ input.list:hover {
 }
 
 #icon2 {
-  -webkit-box-ordinal-group: 5;
-      -ms-flex-order: 4;
-          order: 4;
   padding: 5px 18px;
   background-image: url("../images/english.png");
   background-position: center;
@@ -130,75 +95,20 @@ input.list:hover {
   background-size: 25px 15px;
 }
 
-#icon3 {
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-  padding: 15px 18px;
-  background-image: url("../images/phone-icon2.png");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: 30px 30px;
-}
-
-#icon4 {
-  -webkit-box-ordinal-group: 9;
-      -ms-flex-order: 8;
-          order: 8;
-  padding: 15px 18px;
-  margin-left: 10px;
-  background-image: url("../images/letter-icon2.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 52.5px 28px;
-}
-
-#icon-text1 {
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-  padding: 0 15px 0 0;
-  font-size: 1em;
-}
-
-#icon-text2 {
-  -webkit-box-ordinal-group: 10;
-      -ms-flex-order: 9;
-          order: 9;
-}
-
 footer.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 12vh;
   width: 60%;
 }
 
 footer.container .container__item1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   color: #0c0b10;
   border: 1px #7d7d7d solid;
   background: #d7d7d7;
@@ -209,22 +119,14 @@ footer.container .container__item1 {
 footer.container .container__item1_logo {
   margin-left: 20%;
   opacity: 1;
+  object-fit: contain;
 }
 
 footer.container .container__item1_text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   height: 100%;
   width: 47.5%;
   font-size: 0.8em;
@@ -232,17 +134,11 @@ footer.container .container__item1_text {
 }
 
 footer.container .container__item2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 3.5vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   font-size: 0.8em;
   background: #7d7d7d;
   border: 1px #7d7d7d solid;
@@ -253,18 +149,10 @@ body, html {
   background: #f3f3f3;
   color: white;
   font-family: Lato, "sans-serif";
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   font-size: 1.1rem;
 }
 
@@ -278,134 +166,35 @@ input {
   text-transform: uppercase;
 }
 
-.list_form {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
-}
-
-.list__login_text1 {
-  -webkit-box-ordinal-group: 5;
-      -ms-flex-order: 4;
-          order: 4;
-}
-
-.list__login_text2 {
-  -webkit-box-ordinal-group: 6;
-      -ms-flex-order: 5;
-          order: 5;
-}
-
-.list__login_text3 {
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-}
-
-#icon {
-  position: absolute;
-  left: 0;
-  top: 0;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin: 0 0 2% 0;
-}
-
-#icon1 {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
-  padding: 5px 15px;
-  margin-right: 10px;
-  background-image: url("images/poland.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 25px 15px;
-}
-
-#icon2 {
-  -webkit-box-ordinal-group: 5;
-      -ms-flex-order: 4;
-          order: 4;
-  padding: 5px 18px;
-  background-image: url("images/english.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 25px 15px;
-}
-
-#icon3 {
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-  padding: 15px 18px;
-  background-image: url("images/phone-icon2.png");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: 30px 30px;
-}
-
-#icon4 {
-  -webkit-box-ordinal-group: 9;
-      -ms-flex-order: 8;
-          order: 8;
-  padding: 15px 18px;
-  margin-left: 10px;
-  background-color: transparent;
-  background-image: url("images/letter-icon2.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 52.5px 28px;
-}
-
 section.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 110vh;
   width: 60%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   background: white;
 }
 
 .item1 {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr;
-  -ms-grid-columns: 1fr 0.5fr;
-      grid-template: 1fr / 1fr 0.5fr;
+  grid-template: 1fr / 1fr 0.5fr;
   width: 100%;
   height: 25vh;
   position: relative;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   margin: 0 0 2% 0;
 }
 
 .item1_gradient {
-  display: -ms-grid;
   display: grid;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   position: absolute;
   z-index: 0;
   top: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, right top, color-stop(40%, transparent), color-stop(65%, black));
   background: linear-gradient(to right, transparent 40%, black 65%);
 }
 
@@ -417,17 +206,10 @@ section.container {
 }
 
 .item {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr;
-  -ms-grid-columns: 0.6fr 1fr;
-      grid-template: 1fr / 0.6fr 1fr;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  grid-template: 1fr / 0.6fr 1fr;
+  justify-content: space-between;
+  align-items: center;
   position: relative;
   z-index: 2;
   border: 0.5px #7d7d7d solid;
@@ -441,13 +223,8 @@ section.container {
 .item__container {
   position: absolute;
   z-index: 5;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   overflow: auto;
   height: 100%;
   width: 100%;
@@ -471,7 +248,6 @@ section.container {
   height: 100%;
   position: absolute;
   z-index: 3;
-  background: -webkit-gradient(linear, left top, right top, color-stop(40%, gray), color-stop(60%, transparent));
   background: linear-gradient(to right, gray 40%, transparent 60%);
 }
 
@@ -480,22 +256,14 @@ section.container {
   z-index: 2;
   right: 0;
   top: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .item2 {
-  display: -ms-grid;
   display: grid;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-grid-rows: 1fr;
-  -ms-grid-columns: 1fr 0.65fr;
-      grid-template: 1fr / 1fr 0.65fr;
+  justify-content: space-between;
+  align-items: center;
+  grid-template: 1fr / 1fr 0.65fr;
   position: relative;
   border: 0.5px #7d7d7d solid;
   width: 100%;
@@ -506,13 +274,8 @@ section.container {
 
 .item2__container {
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   overflow: auto;
   z-index: 2;
   right: 0;
@@ -539,7 +302,6 @@ section.container {
   min-width: 100%;
   height: 100%;
   position: absolute;
-  background: -webkit-gradient(linear, right top, left top, color-stop(53%, gray), color-stop(75%, transparent));
   background: linear-gradient(to left, gray 53%, transparent 75%);
   z-index: 2;
 }
@@ -551,8 +313,7 @@ section.container {
   width: 50%;
   height: 100%;
   z-index: 1;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .itemcontainer1 {
@@ -561,29 +322,9 @@ section.container {
   height: 100%;
   z-index: 5;
   margin: 20% 0 0 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#icon-text1 {
-  font-size: 0.9rem;
-  -webkit-box-ordinal-group: 7;
-      -ms-flex-order: 6;
-          order: 6;
-}
-
-#icon-text2 {
-  -webkit-box-ordinal-group: 10;
-      -ms-flex-order: 9;
-          order: 9;
-  font-size: 0.9rem;
+  justify-content: center;
+  align-items: center;
 }
 
 #item__text {
@@ -602,25 +343,19 @@ section.container {
   left: 0%;
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.wrapper {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+#icon {
+  position: absolute;
+  top: 10%;
+  left: -6%;
+  width: 30%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .mobile-wrapper {
