--- a/__variables.scss
+++ b/__variables.scss
@@ -45,6 +45,12 @@ nav {
     }
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 #nav_logo {
     filter: opacity(1);
     margin: 0 1rem 0 0;
@@ -149,7 +155,7 @@ footer.container {
 
             height: 100%;
             width: 47.5%;
-            font-size: 0.8em;
+            font-size: 0.8rem;
             margin-right: 1%;
         }
     }
