szybka łatka tak O?

--- a/__variables.scss
+++ b/__variables.scss
@@ -110,7 +110,7 @@ input {
 #icon1 {
     padding: 5px 15px;
     margin-right: 10px;
-    background-image: url("../images/poland.png");
+    background-image: url("/images/poland.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 25px 15px;
@@ -118,13 +118,14 @@ input {
 
 #icon2 {
     padding: 5px 18px;
-    background-image: url("../images/english.png");
+    background-image: url("/images/english.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 25px 15px;
 }
 
 footer.container {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -134,6 +135,9 @@ footer.container {
     width: 60%;
 
     .container__item1 {
+        position: absolute;
+        bottom: 15%;
+
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -165,8 +169,11 @@ footer.container {
     }
     .container__item2 {
         display: flex;
+        position: absolute;
+        bottom: 0;
+
         width: 100%;
-        height: 3.5vh;
+        height: 3vh;
         justify-content: center;
         align-items: center;
 
