--- a/PanelAdm/style.css
+++ b/PanelAdm/style.css
@@ -91,7 +91,7 @@ input.list:hover {
 #icon1 {
   padding: 5px 15px;
   margin-right: 10px;
-  background-image: url("../images/poland.png");
+  background-image: url("/images/poland.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 25px 15px;
@@ -99,13 +99,14 @@ input.list:hover {
 
 #icon2 {
   padding: 5px 18px;
-  background-image: url("../images/english.png");
+  background-image: url("/images/english.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 25px 15px;
 }
 
 footer.container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -115,6 +116,8 @@ footer.container {
 }
 
 footer.container .container__item1 {
+  position: absolute;
+  bottom: 15%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -145,8 +148,10 @@ footer.container .container__item1_text {
 
 footer.container .container__item2 {
   display: flex;
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 3.5vh;
+  height: 3vh;
   justify-content: center;
   align-items: center;
   font-size: 0.8em;
