--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,7 @@ section.container {
     flex-direction: column;
     align-items: center;
     background: white;
+    margin: 0 0 0 0;
 }
 
 .item1 {
