--- a/__variables.scss
+++ b/__variables.scss
@@ -129,7 +129,7 @@ footer.container {
     grid-template: 7fr 0.3fr / 1fr;
     align-items: end;
 
-    min-height: 10%;
+    height: 1rem;
     width: 60%;
 
     .container__item1 {
@@ -159,8 +159,10 @@ footer.container {
 
             height: 100%;
             width: 47.5%;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             margin-right: 1%;
+
+            color: $Gray;
         }
     }
     .container__item2 {
