--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ section.container {
     width: 60%;
     flex-direction: column;
     align-items: center;
-    background: white;
+    background: transparent;
     margin: 0 0 0 0;
 }
 
@@ -195,10 +195,10 @@ section.container {
 
 #item__text {
     position: absolute;
-    font-size: 0.7rem;
-    width: 50%;
+    font-size: 1rem;
+    width: 70%;
     font-weight: 600;
-    left: 34%;
+    left: 10%;
     top: 33%;
 }
 
