--- a/__variables.scss
+++ b/__variables.scss
@@ -158,9 +158,9 @@ footer.container {
             justify-content: center;
 
             height: 100%;
-            width: 47.5%;
+            width: 12%;
             font-size: 0.9rem;
-            margin-right: 1%;
+            margin: 0 15% 0 0;
 
             color: $Gray;
         }
