--- a/style.css
+++ b/style.css
@@ -138,9 +138,9 @@ footer.container .container__item1_text {
   align-items: flex-start;
   justify-content: center;
   height: 100%;
-  width: 47.5%;
+  width: 12%;
   font-size: 0.9rem;
-  margin-right: 1%;
+  margin: 0 15% 0 0;
   color: #6f6f6f;
 }
 
@@ -165,6 +165,7 @@ body, html {
   justify-content: space-around;
   align-items: center;
   font-size: 1.1rem;
+  overflow-y: scroll;
 }
 
 input {
@@ -179,12 +180,13 @@ input {
 
 section.container {
   display: flex;
-  height: 110vh;
+  height: 120vh;
   width: 60%;
   flex-direction: column;
   align-items: center;
   background: transparent;
   margin: 0 0 0 0;
+  overflow: hidden;
 }
 
 .item1 {
@@ -219,27 +221,26 @@ section.container {
 
 .item {
   display: grid;
-  grid-template: 1fr / 0.6fr 1fr;
+  grid-template: 0.6fr 1fr / 1fr;
   justify-content: space-between;
   align-items: center;
   position: relative;
   z-index: 2;
   border: 0.5px #7d7d7d solid;
   background: transparent;
-  height: 25vh;
-  width: 100%;
-  margin-bottom: 2%;
+  width: 1150px;
+  min-height: 310px;
+  margin: 0 0 2% 0;
   padding: 0;
 }
 
 .item__container {
   position: absolute;
   z-index: 5;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-  height: 100%;
-  width: 100%;
+  display: grid;
+  grid-template: 0.2fr 1fr / 1fr;
+  min-height: 100%;
+  min-width: 100%;
   padding: 1.5%;
 }
 
@@ -251,6 +252,7 @@ section.container {
 }
 
 .item__text {
+  overflow: auto;
   width: 45%;
   font-size: 0.8em;
 }
@@ -427,7 +429,7 @@ section.container {
   }
   footer.container {
     height: 110px;
-    margin: 8vh 0 0 0;
+    margin: 0 0 0 0;
   }
   footer.container .container__item1 {
     height: 12vh;
@@ -444,7 +446,7 @@ section.container {
 
 section.container {
   width: 1150px;
-  height: 1188px;
+  height: auto;
 }
 
 nav {
@@ -468,7 +470,7 @@ nav {
 
 footer.container {
   height: 110px;
-  margin: 8vw 0 0 0;
+  margin: 1% 0 0 0;
 }
 
 footer.container .container__item1 {
@@ -481,7 +483,6 @@ footer.container .container__item1_logo {
 }
 
 footer.container .container__item1_text {
-  width: 47.5%;
   font-size: 0.75em;
 }
 /*# sourceMappingURL=style.css.map */
