--- a/__variables.scss
+++ b/__variables.scss
@@ -129,7 +129,7 @@ footer.container {
     grid-template: 7fr 0.3fr / 1fr;
     align-items: end;
 
-    height: 1rem;
+    height: auto;
     width: 60%;
 
     .container__item1 {
